Added css styles to the main

--- a/index.html
+++ b/index.html
@@ -96,10 +96,26 @@
 </section>
 
 <!-- Portfolio Section Below here-->
-<section class="container">
+<section class="container portfolio">
     <div class="row">
         <!-- make a bar that shows buttons with my skills -->
-        
+        <h1 class="portfolio-h2">portfolio</h1>
+        <button class="btn-danger btn-lg">Sowftware dev</button>
+        <button class="btn-danger btn-lg">Network Engineering</button>
+        <button class="btn-danger btn-lg">System administration</button>
+    </div>
+</section>
+<section class="container skills">
+    <div class="row">
+        <article class="col-md-4">
+            <h3>sofwware dev here</h3>
+        </article>
+        <article class="col-md-4">
+            <h3>Network Engineering</h3>
+        </article>
+        <article class="col-md-4">
+            <h3>System Administration</h3>
+        </article>
     </div>
 </section>
 
