Added css styles to the main

--- a/index.html
+++ b/index.html
@@ -109,12 +109,15 @@
     <div class="row">
         <article class="col-md-4">
             <h3>sofwware dev here</h3>
+            <p>upload my java, ruby projecs</p>
         </article>
         <article class="col-md-4">
             <h3>Network Engineering</h3>
+            <p>Cisco CCNA certified </p>
         </article>
         <article class="col-md-4">
             <h3>System Administration</h3>
+            <p>Linux web serves</p>
         </article>
     </div>
 </section>
