--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="row">
 
         <article class="col-md-3">
-            <img class="img-responsive" src="img/dk-logo.png" alt="kd-logo">
+            <h3>logo here</h3>
 
         </article>
 
         <article class="col-md-9">
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills pull-right">
                 <li role="presentation" class="active"><a href="#">About</a></li>
                 <li role="presentation"><a href="#">Contact</a></li>
                 <li role="presentation"><a href="#">Portfolio</a></li>
@@ -34,54 +34,14 @@
 
 </section>
 
-
-<!-- boxes with pictures are going to be show below -->
-
-<section class="container">
+<section class="container main-section">
     <div class="row">
-        <article class="col-md-3 dk-box">
-            <a href="#" class="about-text">About</a>
-            <!--<img class="img-responsive" src="img/dk-logo.png" alt="kd-logo">-->
-
-
+        <article class="col-md-12">
+            <h1>Programmer / Network Engineer</h1>
         </article>
-
-        <article class="col-md-3 dk-box">
-            <a href="#" class="about-text">Contact</a>
-
-        </article>
-
-        <article class="col-md-3 dk-box">
-            <a href="#" class="about-text">Portfolio</a>
-        </article>
-
-        <article class="col-md-3 dk-box">
-            <a href="#" class="about-text">Geekout</a>
-
-        </article>
-
     </div>
+
 </section>
-<!-- body sections -->
-<section class="container about">
-    <div class="row">
-        <div class="col-md-6 my-pic">
-            <h2>image here</h2>
-            <img class="img-responsive" src="img/me.jpg" alt="Darci Picture">
-        </div>
-        <div class="col-md-6 bio-text">
-            <h2>Bio</h2>
-            <p>My Name is Darci Khey Saucedo, I'm a Computer Science Major at Easter Washington University. I have always
-                been fascinated with problem solving and computer technology. I’m a transfer student from Spokane Community
-                College where I started my education in 2013.</p>
-            <p> Writing computer software and designing computer networks is the heart of my passion for Computer
-                Science. </p>
-
-        </div>
-
-    </div>
-</section>
-
 <!-- contact block below here-->
 <section class="container contact-section">
     <div class="row contact-section">
