--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section class="container main-section">
     <div class="row">
         <article class="col-md-12">
-            <h1>Programmer / Network Engineer</h1>
+            <h1>Network/Cloud Systems programmer</h1>
         </article>
     </div>
 
